--- a/Lab3_Leukemia_Classification/lab3_ResNet50_SGD.ipynb
+++ b/Lab3_Leukemia_Classification/lab3_ResNet50_SGD.ipynb
@@ -310,7 +310,11 @@
     "            global predicted_label\n",
     "            predicted_label = predicted_list\n",
     "            best_acc = valid_acc\n",
-    "            torch.save(model.state_dict(), \"ResNet50_\"+str(optimizer.__class__.__name__)+\".pth\")\n",
+    "            \n",
+    "            file_name = \"ResNet50_\"+str(optimizer.__class__.__name__)+\".pth\"\n",
+    "            file_folder = \"models\"\n",
+    "            file_path = os.path.join(file_folder, file_name)\n",
+    "            torch.save(model.state_dict(), file_path)\n",
     "            '''\n",
     "            print(\"Model state dict:\")\n",
     "            for param_tensor in model.state_dict():\n",
@@ -554,8 +558,12 @@
     "loss_fn = nn.CrossEntropyLoss().to(device)\n",
     "model = ResNet50().to(device)\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=0.001, weight_decay=5e-4, momentum=0.9)\n",
-    "filename = \"ResNet50_\"+str(optimizer.__class__.__name__)+\".pth\"\n",
-    "model.load_state_dict(torch.load(filename))\n",
+    "\n",
+    "file_name = \"ResNet50_\"+str(optimizer.__class__.__name__)+\".pth\"\n",
+    "file_folder = \"models\"\n",
+    "file_path = os.path.join(file_folder, file_name)\n",
+    "model.load_state_dict(torch.load(file_path))\n",
+    "\n",
     "model.eval()\n",
     "best_acc = valid(valid_loader, model, loss_fn)\n",
     "print(f'Best valid acc: {best_acc:.2f}%')"
@@ -573,8 +581,12 @@
     "loss_fn = nn.CrossEntropyLoss().to(device)\n",
     "model = ResNet50().to(device)\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=0.001, weight_decay=5e-4, momentum=0.9)\n",
-    "filename = \"ResNet50_\"+str(optimizer.__class__.__name__)+\".pth\"\n",
-    "model.load_state_dict(torch.load(filename))\n",
+    "\n",
+    "file_name = \"ResNet50_\"+str(optimizer.__class__.__name__)+\".pth\"\n",
+    "file_folder = \"models\"\n",
+    "file_path = os.path.join(file_folder, file_name)\n",
+    "model.load_state_dict(torch.load(file_path))\n",
+    "\n",
     "model.eval()\n",
     "test(test_loader, model)\n",
     "test_predicted_label = np.concatenate(test_predicted_label).tolist()"
