--- a/Lab3_Leukemia_Classification/lab3_ResNet50_SGD.ipynb
+++ b/Lab3_Leukemia_Classification/lab3_ResNet50_SGD.ipynb
@@ -88,7 +88,7 @@
     "        \n",
     "        if self.mode == 'train':\n",
     "            transform=transforms.Compose([\n",
-    "                transforms.CenterCrop(400), # crops the center region of the image with a square size of height\n",
+    "                # transforms.CenterCrop(400), # crops the center region of the image with a square size of height\n",
     "                # transforms.Resize(400), # (h, w) 512x512 pixels\n",
     "                transforms.RandomHorizontalFlip(), #  randomly flips the image horizontally with a 50% chance\n",
     "                transforms.RandomRotation(degrees=15), # randomly rotates the image by a maximum of 15 degree\n",
@@ -99,7 +99,7 @@
     "            ])\n",
     "        elif self.mode == 'valid':\n",
     "            transform=transforms.Compose([\n",
-    "                transforms.CenterCrop(400),\n",
+    "                # transforms.CenterCrop(400),\n",
     "                # transforms.Resize(400),\n",
     "                transforms.ToTensor(),\n",
     "                transforms.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225)),\n",
@@ -277,20 +277,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7f165df9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_acc = []\n",
-    "valid_acc = []\n",
-    "predicted_list = []\n",
-    "predicted_label = []\n",
-    "test_predicted_label = []"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "c5061404",
    "metadata": {},
@@ -321,7 +307,7 @@
     "                print(param_tensor, \"\\t\", model.state_dict()[param_tensor])\n",
     "            print(\"Model save\")\n",
     "            '''\n",
-    "        if (e+1) == num_epoch:\n",
+    "        if (e+1) == num_epoch or (e % (num_epoch//10))==0:\n",
     "            print(f'best acc: {best_acc:.2f}%')\n",
     "            \n",
     "def train(train_loader, model, loss_fn, optimizer):\n",
@@ -487,6 +473,12 @@
     }
    ],
    "source": [
+    "train_acc = []\n",
+    "valid_acc = []\n",
+    "predicted_list = []\n",
+    "predicted_label = []\n",
+    "test_predicted_label = []\n",
+    "\n",
     "num_epoch = 101\n",
     "model = ResNet50().to(device)\n",
     "loss_fn = nn.CrossEntropyLoss().to(device)\n",
