--- a/Lab3_Leukemia_Classification/lab3_ResNet152_SGD.ipynb
+++ b/Lab3_Leukemia_Classification/lab3_ResNet152_SGD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7ce50a15",
    "metadata": {},
    "outputs": [],
@@ -127,10 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "53447c6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1067"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.manual_seed(514)\n",
     "\n",
@@ -157,10 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cf65871c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_device():\n",
     "    return 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -171,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "63d94ad4",
    "metadata": {},
    "outputs": [],
@@ -256,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c5061404",
    "metadata": {},
    "outputs": [],
    "source": [
     "def epoch_loop(cur_epoch, num_epoch, remaining_epoch, train_loader, test_loader, model, loss_fn, optimizer, train_acc_list, valid_acc_list):\n",
     "    best_acc = 0\n",
-    "    for e in range(remaining_epoch):\n",
+    "    for e in range(1, remaining_epoch+1):\n",
     "        global predicted_list\n",
     "        predicted_list = []\n",
     "        train_acc = train(train_loader, model, loss_fn, optimizer, train_acc_list)\n",
@@ -296,8 +318,24 @@
     "                    'model_state_dict': model.state_dict(),\n",
     "                    'optimizer_state_dict': optimizer.state_dict()\n",
     "                }, f)\n",
-    "        if (e+1 == num_epoch or e % (1 if (num_epoch // 10) == 0 else (num_epoch // 10)))==0:\n",
+    "        if (e == remaining_epoch or e % (1 if (num_epoch // 10) == 0 else (num_epoch // 10)))==0:\n",
     "            print(f'best acc: {best_acc:.2f}%')\n",
+    "            with open('models/ResNet152/train_state.pkl', 'wb') as f:\n",
+    "                pickle.dump({\n",
+    "                    'num_epoch': num_epoch,\n",
+    "                    'cur_epoch': cur_epoch + e,\n",
+    "                    'remaining_epoch': num_epoch - (cur_epoch + e),\n",
+    "                    'loss_fn': loss_fn,\n",
+    "                    \n",
+    "                    'train_acc_list': train_acc_list,\n",
+    "                    'valid_acc_list': valid_acc_list,\n",
+    "                    'predicted_list': predicted_list,\n",
+    "                    'predicted_label': predicted_label,\n",
+    "                    'test_predicted_label': test_predicted_label,\n",
+    "                    \n",
+    "                    'model_state_dict': model.state_dict(),\n",
+    "                    'optimizer_state_dict': optimizer.state_dict()\n",
+    "                }, f)\n",
     "            \n",
     "def train(train_loader, model, loss_fn, optimizer, train_acc_list):\n",
     "    model.train() \n",
@@ -357,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f621f4e3",
    "metadata": {},
    "outputs": [],
@@ -384,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7e47da7f",
    "metadata": {},
    "outputs": [],
@@ -425,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "55d4d09b",
+   "execution_count": 8,
+   "id": "9457472c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,12 +482,34 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:     2, train_acc:84.02%\n",
+      "Epoch:     2, valid_acc:68.29%\n",
+      "best acc: 80.30%\n",
+      "Epoch:     4, train_acc:87.92%\n",
+      "Epoch:     4, valid_acc:85.05%\n",
+      "best acc: 85.05%\n",
+      "Epoch:     6, train_acc:89.23%\n",
+      "Epoch:     6, valid_acc:78.99%\n",
+      "best acc: 85.05%\n",
+      "Epoch:     8, train_acc:90.03%\n",
+      "Epoch:     8, valid_acc:88.56%\n",
+      "best acc: 88.56%\n",
+      "Epoch:    10, train_acc:90.18%\n",
+      "Epoch:    10, valid_acc:80.55%\n",
+      "best acc: 88.56%\n"
+     ]
+    }
+   ],
    "source": [
     "# Training step\n",
     "\n",
     "cur_epoch = 0\n",
-    "num_epoch = 201\n",
+    "num_epoch = 21\n",
     "remaining_epoch = num_epoch - cur_epoch\n",
     "\n",
     "model = ResNet152().to(device)\n",
@@ -463,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d623d8d",
+   "id": "b06fef42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +540,7 @@
     "remaining_epoch = num_epoch - cur_epoch\n",
     "loss_fn = train_state['loss_fn']\n",
     "\n",
-    "if remaining_epoch != 0:\n",
+    "if remaining_epoch > 0:\n",
     "    print(f'Current epoch: {cur_epoch}, Remaining epoch: {remaining_epoch}')\n",
     "\n",
     "    train_acc_list = train_state['train_acc_list']\n",
@@ -504,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e986d775",
+   "id": "52fd7d5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94c2b928",
+   "id": "73836e56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2228e38",
+   "id": "2eec5944",
    "metadata": {},
    "outputs": [],
    "source": [
