--- a/Lab3_Leukemia_Classification/lab3_ResNet50_SGD.ipynb
+++ b/Lab3_Leukemia_Classification/lab3_ResNet50_SGD.ipynb
@@ -296,8 +296,24 @@
     "                    'model_state_dict': model.state_dict(),\n",
     "                    'optimizer_state_dict': optimizer.state_dict()\n",
     "                }, f)\n",
-    "        if (e+1 == num_epoch or e % (1 if (num_epoch // 10) == 0 else (num_epoch // 10)))==0:\n",
+    "        if (e == remaining_epoch or e % (1 if (num_epoch // 10) == 0 else (num_epoch // 10)))==0:\n",
     "            print(f'best acc: {best_acc:.2f}%')\n",
+    "            with open('models/ResNet50/train_state.pkl', 'wb') as f:\n",
+    "                pickle.dump({\n",
+    "                    'num_epoch': num_epoch,\n",
+    "                    'cur_epoch': cur_epoch + e,\n",
+    "                    'remaining_epoch': num_epoch - (cur_epoch + e),\n",
+    "                    'loss_fn': loss_fn,\n",
+    "                    \n",
+    "                    'train_acc_list': train_acc_list,\n",
+    "                    'valid_acc_list': valid_acc_list,\n",
+    "                    'predicted_list': predicted_list,\n",
+    "                    'predicted_label': predicted_label,\n",
+    "                    'test_predicted_label': test_predicted_label,\n",
+    "                    \n",
+    "                    'model_state_dict': model.state_dict(),\n",
+    "                    'optimizer_state_dict': optimizer.state_dict()\n",
+    "                }, f)\n",
     "            \n",
     "def train(train_loader, model, loss_fn, optimizer, train_acc_list):\n",
     "    model.train() \n",
