--- a/Lab4_Conditional_VAE_for_Video_Prediction/kl_annealing.ipynb
+++ b/Lab4_Conditional_VAE_for_Video_Prediction/kl_annealing.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2b2e16e4",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
     "from torchvision.datasets.folder import default_loader as imgloader\n",
     "from torch import stack\n",
     "def get_key(fp):\n",
-    "    filename = fp.split('/')[-1]\n",
+    "    filename = fp.split('\\\\')[-1]\n",
     "    filename = filename.split('.')[0].replace('frame', '')\n",
     "#     print(f'filename = {filename}')\n",
     "    filename = filename.replace('train_img\\\\', '')  # 移除 \"train_img\" 字串\n",
@@ -113,10 +113,10 @@
     "        super().__init__()\n",
     "        assert mode in ['train', 'val'], \"There is no such mode !!!\"\n",
     "        if mode == 'train':\n",
-    "            self.img_folder     = sorted(glob(os.path.join(root, 'LAB4_Dataset/train/train_img/*.png')), key=get_key)\n",
+    "            self.img_folder     = sorted(glob(os.path.join(root, 'LAB4_Dataset\\\\train\\\\train_img\\\\*.png')), key=get_key)\n",
     "            self.prefix = 'train'\n",
     "        elif mode == 'val':\n",
-    "            self.img_folder     = sorted(glob(os.path.join(root, 'LAB4_Dataset/val/val_img/*.png')), key=get_key)\n",
+    "            self.img_folder     = sorted(glob(os.path.join(root, 'LAB4_Dataset\\\\val\\\\val_img\\\\*.png')), key=get_key)\n",
     "            self.prefix = 'val'\n",
     "        else:\n",
     "            raise NotImplementedError\n",
@@ -185,6 +185,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "d5918707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "def val_dataloader():\n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.Resize((32, 64)),\n",
+    "        transforms.ToTensor()\n",
+    "    ])\n",
+    "    dataset = Dataset_Dance(root=\".\", transform=transform, mode='val', video_len=630, partial=1.0)  \n",
+    "    val_loader = DataLoader(dataset,\n",
+    "                              batch_size=1,\n",
+    "                              num_workers=4,\n",
+    "                              drop_last=True,\n",
+    "                              shuffle=False)  \n",
+    "    return val_loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e5d04bf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_loader = val_dataloader()\n",
+    "len(val_loader) # 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "92a71477",
    "metadata": {},
@@ -204,14 +250,6 @@
    "source": [
     "%run Trainer.py --DR LAB4_Dataset --save_root checkpoint --fast_train"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8df264a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
